# jstest-qt

./: .gitignore  CMakeLists.txt  resources.qrc
src/: joystick 2.cpp  joystick 2.h  joystick.cpp  joystick.h  joystick_description.h  joystick_factory.cpp  joystick_factory.h  libinput_joystick.cpp  libinput_joystick.h  main.cpp  main.h
src/dialogs/: calibrate_maximum_dialog.cpp  calibrate_maximum_dialog.h  joystick_calibration_dialog.cpp  joystick_list_dialog.cpp  joystick_list_dialog.h  joystick_map_dialog.h  joystick_test_dialog.cpp  joystick_test_dialog.h
src/dialogs 2/: joystick_calibration_dialog.h  joystick_list_dialog.cpp  joystick_map_dialog.cpp  joystick_test_dialog.h
src/tools/: libinput_test.cpp
src/utils/: dialog_helper.h  evdev_helper.cpp  evdev_helper.h  libinput_helper.cpp  libinput_helper.h  wayland_helper.h
src/utils 2/: evdev_helper.h
src/widgets/: axis_widget.cpp  axis_widget.h  button_widget.cpp  rudder_widget.cpp  throttle_widget.cpp
src/widgets 2/: axis_widget.cpp  button_widget.cpp  button_widget.h  remap_widget.cpp  remap_widget.h  rudder_widget.h  throttle_widget.h
